# devjam2025_g_api1

./: README.md  database.py  main.py  models.py  pyproject.toml  requirements.txt  sqlite.db  test.py
frontend/: application-snippets-dialog.tsx  conversational-profile-input.tsx  department-selector.tsx  dev.ts  evaluate-department-rankings.ts  profile-form.tsx  tailwind.config.ts
frontend/ai/flows/: generate-application-snippets-flow.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/ui/: card.tsx
frontend/config/: appConfig.ts
frontend/docs/: blueprint.md
frontend/flows/: profile-conversation-flow.ts
frontend/hooks/: use-toast.ts
frontend/src/app/: globals.css
frontend/src/components/: deadline-chart.tsx  icons.tsx  progress-indicator.tsx
frontend/src/types/: index.ts
templates/: calendar.html  chat.html  home.html  index.html  login.html  table.html
